<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:elevation="3dp"
        card_view:cardCornerRadius="@dimen/card_album_radius">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="102dp"
                    android:background="@color/colorLightGray"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/ReportcellTotextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name" />


                    <TextView
                        android:id="@+id/texType"
                        style="@style/ReportcellTotextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView"
                        android:text="@string/type" />

                    <TextView
                        style="@style/ReportcellsenttextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/texType"
                        android:text="@string/subject" />

                    <TextView
                        style="@style/ReportcellsenttextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/subject"
                        android:text="@string/status" />

                    <TextView
                        style="@style/ReportcellsenttextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/subject"
                        android:text="@string/priority" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorGray" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/re_view"
                    android:layout_width="match_parent"
                    android:layout_height="102dp"
                    android:layout_marginLeft="16dp"
                    android:gravity="left|center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_name"
                        style="@style/BlueColorcellTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/subject"
                        android:layout_alignParentTop="true"
                        android:layout_alignStart="@+id/subject"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:paddingRight="5dp"
                        android:text="" />


                    <TextView
                        android:id="@+id/tv_type"
                        style="@style/BlueColorcellTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_name"
                        android:layout_toLeftOf="@+id/imb_next"
                        android:layout_toStartOf="@+id/imb_next"
                        android:text="" />

                    <TextView
                        android:id="@+id/subject"
                        style="@style/BlueColorcellDateTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/tv_type"
                        android:text="" />

                    <TextView
                        android:id="@+id/staus"
                        style="@style/BlueColorcellDateTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/tv_type"
                        android:text="" />

                    <TextView
                        android:id="@+id/priority"
                        style="@style/BlueColorcellDateTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/tv_type"
                        android:text="" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorLightGray" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>